@@ -60,8 +60,11 @@ SeahorseServerSource* seahorse_server_source_new     (SeahorseKeySource *locsrc,
                                                       const gchar *pattern);
 
 GSList*     seahorse_server_source_get_types         ();
+
 GSList*     seahorse_server_source_get_descriptions  ();
 
 gboolean    seahorse_server_source_valid_uri         (const gchar *uri);
-                                                      
+
+GSList*		seahorse_server_source_purge_keyservers	 (GSList *keyservers);
+
 #endif /* __SEAHORSE_SERVER_SOURCE_H__ */
