@@ -1,3 +1,7 @@
+2005-05-18  Nate Nielsen  <nielsen@memberwebs.com>
+
+	* Merge seahorse-0-8 changes into HEAD
+
 2005-05-15  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-gconf.c:
